# cmake-dll

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dynamic/: CMakeLists.txt  dynamic.cpp
